examples/neg/no_continuation_defs.effekt
def foo() =
  def bar() = 42 // ERROR enclosed in braces